--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Essentialism</title>
+  <title>Esse - Home</title>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -19,7 +19,9 @@
 <body>
   <div class="bg">
     <div class="container">
-      <div class="sqaure-boxes"></div>
+      <div class="pattern-container">
+        <div class="square-pattern"></div>
+      </div>
       <header class="topbar">
         <h1 class="logo"><span>ES<br>SE</span></h1>
         <div href="#" class=" fas fa-bars nav-btn"></div>
