--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 
   <link rel="stylesheet" href="css/index.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   <script defer src="./Components/Nav/Nav.js"></script>
+  <script defer src="script/main.js"></script>
 </head>
 
 <body>
   <div class="bg">
     <header class="home-topbar">
       <h1 class="logo"><span>ES<br>SE</span></h1>
-      <div href="#" class=" fas fa-bars nav-btn"></div>
+      <div href="#" class="fas fa-bars nav-btn"></div>
       <nav class="navlinks">
         <a class="nav-link active" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
         <a class="nav-link" href="contact.html">Contact</a>
-        <a class="nav-link login" href="#">Login</a>
+        <a class="nav-link login" href="#">Sign In</a>
+        <a class="nav-link join" href="#">Join</a>
       </nav>
     </header>
     <div class="container">
@@ -43,7 +45,7 @@
       </section>
 
       <section class="home-cards">
-        <h2>Identify Your Values</h2>
+        <h2>Focus on your core values</h2>
         <div class="card-container">
           <div class="card">
             <img src="assets/design-flow.svg" alt="">
@@ -61,7 +63,7 @@
       </section>
     </div>
   </div>
-  </header>
+
 </body>
 
 </html>
